# pf_imgui_sdl_template

./: .clang-format  CMakeLists.txt  config.toml  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
src/imgui/: ImGuiSDLInterface.h
src/utils/: files.cpp  files.h
